--- a/estilo.css
+++ b/estilo.css
@@ -40,7 +40,7 @@ header#cabecalho img#icone{ /* img com id (#) icone do header com id(#) cabecalh
 header#cabecalho {
 	border-bottom: 1px #606060 solid;
 	height: 150px;
-	background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 80px;
+	
 }
 
 header#cabecalho h1 { /*No Objeto header cujo ID é cabeçalho para todo objeto h1*/
@@ -209,11 +209,16 @@ table#tabelaspec caption span{
 	margin-top: 10px;
 }
 
+aside{
+	border-radius: 15px;
+}
+
 aside#lateral{
 	display: block;
 	width: 350px;
 	float: right;
-	background-color: #dddddd;
+	/*background-color: #dddddd;*/
+	background-image: url('wallpaper001.jpg');
 	padding: 10px;
 	margin-top: 10px;
 	box-shadow: 2px 2px 2px rgba(0,0,0,.5);
@@ -222,8 +227,9 @@ aside#lateral{
 aside#lateral h1{
 	font-family: 'FonteLogo', sans-serif;
 	font-size: 20pt;
-	color: #606060;
+	color: #0d0d0d;
 	margin-top: 0px;
+	background-color: #606060;
 }
 
 aside#lateral h2{
@@ -231,6 +237,10 @@ aside#lateral h2{
 	font-size: 13pt;
 	color: #ffffff;
 	padding: 5px;
+}
+
+aside#lateral p{
+	color:#ffffff;
 }
 
 footer#rodape{
