--- a/fotos.css
+++ b/fotos.css
@@ -108,3 +108,43 @@ ul#album-fotos li#foto06:hover{
 	background-size: 200px 200px;
 	background-position: 0px 0px;
 }
+ul#album-fotos li#volvo1{
+	background: url('volvo1.jpg') no-repeat;
+	background-position: 50% 50%;
+	background-size: 400px 400px;
+	background-color: #ffffff;
+}
+
+ul#album-fotos li#volvo1:hover{
+	background-size: 200px 200px;
+	background-position: 0px 0px;
+}
+
+ul#album-fotos li#volvo2{
+	background: url('volvo2.jpg') no-repeat;
+	background-position: 50% 50%;
+	background-size: 400px 400px;
+	background-color: #ffffff;
+}
+
+ul#album-fotos li#volvo2:hover{
+	background-size: 200px 200px;
+	background-position: 0px 0px;
+}
+
+ul#album-fotos li#volvo3{
+	background: url('volvo3.png') no-repeat;
+	background-position: 50% 50%;
+	background-size: 400px 400px;
+	background-color: #ffffff;
+}
+
+ul#album-fotos li#volvo3:hover{
+	background-size: 200px 200px;
+	background-position: 0px 0px;
+}
+
+
+fieldset{
+	padding:1px;
+}
