--- a/fotos.css
+++ b/fotos.css
@@ -149,14 +149,14 @@ fieldset{
 	padding:1px;
 }
 
-img{
+td img{
 	width: 50px;
 	margin: 10px;
 	border-radius: 50%;
 	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
 	box-sizing: border-box;
 }
-img:hover{
+td img:hover{
 	border: 2px solid rgba(255,255,255,0.637);
 	transform: translate(-3px,-3px);
 	box-shadow: 5px 5px 10px black;
